# Reformulating-Transformers-for-LLMs

./: - TAGS: use códigos como Σ7 (fatos), Ψ4 (conceitos), Δ2 (decisões), Ξ3 (exceções), Ω (núcleo).py  -home-padilha-trabalhos-QRH2-Reformulating-Transformers-for- (2).txt  .dockerignore  .gitignore  ANALISE_CAMADAS.md  ANALYSIS_COMPLETE.md  COLAB_README.md  DOCUMENTATION_OVERVIEW.md  Dockerfile  Enhanced_Transparency_Framework.py  FAIR_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FRAMEWORK_TEST_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MANIFESTO.md  MANUAL_STEPS.md  MELHORIAS_IMPLEMENTADAS.md  Makefile  NEW_FEATURES_PROPOSAL.md  NEXT_ACTIONS.md  NEXT_STEPS.md  PHASE1_COMPLETE_SUMMARY.md  PrimeTalkBlock_20250922_QRHCore.md  PrimeTalkBlock_20250922_QuaternionOps.md  PrimeTalkBlock_20250922_SpectralFilter.md  PrimeTalk_Index.md  QRHLayer.md  QUICKSTART.md  QUICK_START_FAIR.md  README.Docker.md  README.md  README_DYNAMIC_VOCAB.md  README_IMPLEMENTATION.md  README_PROMPT_ENGINE.md  README_QUANTUM_VOCAB.md  README_pure_pipeline.md  README_ΨQRH_REFACTOR.md  (+251 more)
.venv_docs/: pyvenv.cfg
DOCUMENTOS/: 50_PERCENT_REDUCTION_SUMMARY.md  AGENTIC_DECOUPLING_REPORT.md  AGENTIC_LAYER_ISOLATION_COMPLETE.md  API_PARAMETROS_EXEMPLO.md  BENCHMARK_REFACTORING_SUMMARY.md  CALIBRATION_SUMMARY.md  CHANGELOG_COGNITIVE_FILTERS.md  COGNITIVE_INTEGRATION_SUMMARY.md  CONSCIOUSNESS_COUPLING_IMPLEMENTATION.md  DOCKER_COMMANDS.md  FAIR_COMPLIANCE.md  FCI_CALIBRATION_REPORT.md  FCI_THRESHOLD_CALIBRATION_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_REPORT.md  FINAL_SCIENTIFIC_VALIDATION.md  FINAL_SYSTEM_STATUS.md  HARMONIC_GLS_GUIDE.md  ICASSP_2026_Paper.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PRIORITIES.md  IMPLEMENTATION_PROMPT_ENGINE.md  IMPLEMENTATION_STATUS.md  INTEGRATED_SCIENTIFIC_FRAMEWORK.md  LANGUAGE_MODELING_PIPELINE_SUMMARY.md  MEMORY_OPTIMIZATION_SUMMARY.md  NEXT_ACTIONS_ΨCWS.md  OPTIMIZATION_SUMMARY.md  PARADIGM_ANALYSIS_BEFORE_AFTER.md  PARAMETROS_API_OLA_SISTEMA.md  PARAMETROS_REAIS_UTILIZADOS.md  PROJECT_STATUS.md  PSIQRH_INTERACTIVE_TEST_REPORT.md  QUICKSTART_COGNITIVE.md  README_INTERACTIVE_TEST.md  README_SPECTRAL_PIPELINE.md  README_STATE_EXPLORATION.md  README_UPDATE_SUMMARY.md  README_ΨCWS_TRAINING.md  README_ΨCWS_TRAINING_ENGLISH.md  (+11 more)
FINAL/: CONVERSION_SUMMARY.md  EMBEDDING_CONVERSION_SOLUTION.md  EXECUTIVE_SUMMARY.md  FINAL_CONCLUSION.md  IMPLEMENTATION_PLAN.md  SPECTRAL_CONVERSION_ANALYSIS.md  SPECTRAL_CONVERSION_INDEX.md  WEIGHT_MAPPING_SOLUTION.md
VALIDACAO/: API_CURL_EXAMPLES.md  CERTIFICATION_IMPROVEMENTS_SUMMARY.md  CONSOLIDATED_VALIDATION_REPORT.md  FINAL.md  INTEGRATION_COMPLETE.md  PIPELINE_FINAL_STATUS.md  PIPELINE_RESULTS.md  PIPELINE_SUCCESS.md  PIPELINE_TEST_GUIDE.md  PSIQRH_FIXES_REPORT.md  README.md  REGISTRY_CLEANUP_SUMMARY.md  SECURITY_DIRECTORY_STRUCTURE.md  SECURITY_FRAMEWORK_DESIGN.md  SECURITY_FRAMEWORK_SUMMARY.md  TEST_RESULTS.md  VALIDATION_SUMMARY.md  WORK_SUMMARY.md  run_complete_validation.py  test_complete_pipeline.py  test_real_psiqrh_fixes.py  validate_core_properties.py
benchmark_psiqrh/: psi_qrh_benchmark.py  psi_qrh_benchmark_full.py  psi_qrh_benchmark_leech.py  psi_qrh_benchmark_metrics.py  psi_qrh_benchmark_spectro.py  psi_qrh_benchmark_wiki.py
benchmark_results/: benchmark_summary.json  glue_results.json  paper_tables.json  wikitext_results.json
biPsiQRH/: benchmark_biPsiQRH.py  psi_qrh_config.json  psi_qrh_evaluator.py  psi_qrh_semantic_pipeline.py  semantic_base.py  semantic_fusion_engine.py  semantic_processing_pipeline.py
configs/: README.md  cognitive_filters_config.yaml  comprehensive_integration_report.yaml  example_configs.yaml  fractal_config.yaml  fractal_consciousness_config.yaml  harmonic_coupling_config.yaml  kuramoto_config.yaml  pipeline_config.yaml  psiqrh_transformer_config.yaml  qrh_config.yaml
data/: contrastive_training_data.json  deep_reasoning_cognitive_results.json  example_audit.jsonl  native_vocab.json  performance_metrics.json  robust_integration_validation_results.json  training_data_large.json
docs/: AUTO_GENERATED_DOC_test_new_layer_2025-09-25T07:18:09.908585Z.md  CONSCIOUSNESS_METRICS_CONFIG.md  FAIRSHARING_REGISTRATION.md  MODEL_CHECKPOINTS.md  VERIFICACAO_CORRECOES_FISICAS.md  doc_spectral_projector_1758786513.md  doc_spectral_projector_1758789270.md  mapping_architecture.md  spectral_projector.md
e-book/: README.md  _config.yml  _toc.yml  _toc_new.yml  appendix.md  conclusion.md  intro.md  prologue_new.md
evaluation_engine/: README.md  helm_client.py  lm_eval_model.py  psiqrh_evaluation_engine.py
examples/: TEST.md  advanced_energy_test.py  analysis_to_meditation_experiment.py  basic_usage.py  complete_spectral_pipeline.py  complete_spectral_pipeline_300_words.py  complete_spectral_results.json  config_loader.py  debug_character_mapping.py  debug_embedding_process.py  debug_spectral_probe.py  debug_spectral_transform.py  embedding_discriminability_experiment.py  emergence_state_visualization.py  energy_conservation_test.py  fix_quaternion_rotation.py  fix_spectral_inverse.py  harmonic_coupling.py  human_readable_spectral_pipeline.py  improved_spectral_pipeline.py  integrated_scientific_pipeline.py  meditation_state_simulation.py  mvp_pipeline_test.py  (+15 more)
(+1732 files in other folders)
